# EAKIS

./: .env  .env.example  .gitignore  README.md  agentdb.rvf  ai_attack_surface_prototype.html  alembic.ini  eakis_test.db  pyproject.toml  ruvector.db  test_report.md
.claude/: settings.local.json
config/: README.md  crawler.yaml  datasources.yaml  engines.yaml
docs/: 1.添加企业名称  DSL_CRAWLER_REAL_MODE_GUIDE.md  EAKIS-supplement.md  EAKIS.md  NEXT_SESSION_PLAN.md  RBAC权限管理设计文档.md  ROADMAP.md  TESTING_GUIDE.md  part1.md  part2.md  part3.md  part4.md  前端原型.html  前端开发对接规范.md
examples/: cdp_dsl_demo.py
migrations/: env.py
scripts/: batch_asset_extract.py  extract_from_urls.py  merge_results.py  run_dev.py  run_fujian_unicom_extract.py  seed_companies.py  seed_knowledge.py  seed_mock_data.py  seed_rbac.py  seed_templates.py  test_cdp_mode.py  test_cdp_single.py  test_content_extraction.py  test_dsl_crawl_fujian_unicom.py  test_dsl_crawler.py  test_dsl_crawler_integration.py  test_dsl_general_search.py  test_integration.py  test_orchestrator.py  test_orchestrator_quick.py  test_pipeline_full.py
test_results/: asset_extract_20260518_153121.json  asset_extract_20260518_154425.json  dsl_crawler_test_20260511_190815.json  dsl_crawler_test_20260511_190831.json  dsl_crawler_test_20260512_083253.json  dsl_crawler_test_20260512_083304.json  dsl_crawler_test_20260512_090448.json  fujian_unicom_crawl_20260515_110714.json  fujian_unicom_crawl_20260515_113215.json  fujian_unicom_crawl_20260515_113341.json  fujian_unicom_extract_20260518_150906.json  integration_test_report.json  (+2 more)
(+367 files in other folders)
