[tool.poetry]
name = "attackscope-ai"
version = "2.0.0"
description = "AI-empowered Attack Surface Detection System"
authors = ["EAKIS Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web framework
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
# Database
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
# Task queue
celery = {extras = ["redis"], version = "^5.3"}
redis = "^5.0"
# Message queue
kafka-python = "^2.0"
# Agent orchestration
langgraph = "^0.2"
langchain-core = "^0.3"
# LLM
openai = "^1.30"
# Browser automation
playwright = "^1.44"
# RAG / Vector store
llama-index = "^0.10"
qdrant-client = "^1.9"
# Object storage
minio = "^7.2"
# Monitoring
prometheus-client = "^0.20"
opentelemetry-api = "^1.25"
opentelemetry-sdk = "^1.25"
# Utilities
pydantic = "^2.7"
python-dotenv = "^1.0"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
